--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "web",
-  "version": "0.1.0",
+  "name": "rotaract-rbu",
+  "version": "0.9.10",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
